fix card skills z-index

--- a/style/components/card.css
+++ b/style/components/card.css
@@ -98,6 +98,7 @@
   box-shadow: 0 0px 16px rgb(0,0,0,0.3);
   border-radius: 0 0 4px 4px;
   background-color: white;
+  z-index: 2;
 }
 
 .card-skills-info-content {
